--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,8 @@
-streamlit
-ultralytics
-pillow
-numpy
-opencv-python
-torch
-torchvision
-torchvision
-pil
-os
-cv2
-requests
+streamlit==1.39.0
+ultralytics==8.3.9
+pillow==10.4.0
+numpy==1.26.4
+opencv-python==4.10.0.84
+torch==2.4.0
+torchvision==0.19.0
+requests==2.32.3
